
[TestCommand_Docker/Fake_alpine_image - 1]
Checking if docker image ("alpine:non-existent-tag") exists locally...

---

[TestCommand_Docker/Fake_alpine_image - 2]
Docker command exited with code ("/usr/bin/docker pull -q alpine:non-existent-tag"): 1
STDERR:
> Error response from daemon: manifest for alpine:non-existent-tag not found: manifest unknown: manifest unknown
failed to pull container image: failed to run docker command

---

[TestCommand_Docker/Fake_image_entirely - 1]
Checking if docker image ("this-image-definitely-does-not-exist-abcde:with-tag") exists locally...

---

[TestCommand_Docker/Fake_image_entirely - 2]
Docker command exited with code ("/usr/bin/docker pull -q this-image-definitely-does-not-exist-abcde:with-tag"): 1
STDERR:
> Error response from daemon: pull access denied for this-image-definitely-does-not-exist-abcde, repository does not exist or may require 'docker login': denied: requested access to the resource is denied
failed to pull container image: failed to run docker command

---

[TestCommand_Docker/Real_Alpine_image - 1]
Checking if docker image ("alpine:3.18.9") exists locally...
Saving docker image ("alpine:3.18.9") to temporary file...
Scanning image "alpine:3.18.9"

Container Scanning Result (Alpine Linux v3.18):
Total 2 packages affected by 3 known vulnerabilities (0 Critical, 0 High, 0 Medium, 0 Low, 3 Unknown) from 1 ecosystem.
3 vulnerabilities can be fixed.


Alpine:v3.18
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| musl           | 1.2.4-r2          | Fix Available |          1 | musl, musl-utils        | # 0 Layer        | alpine        |
| openssl        | 3.1.7-r0          | Fix Available |          2 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_Docker/Real_Alpine_image - 2]

---

[TestCommand_Docker/Real_empty_image_with_no_tag,_invalid_scan_target - 1]

---

[TestCommand_Docker/Real_empty_image_with_no_tag,_invalid_scan_target - 2]
"hello-world" is not a tagged image name

---

[TestCommand_Docker/Real_empty_image_with_tag - 1]
Checking if docker image ("hello-world:linux") exists locally...
Saving docker image ("hello-world:linux") to temporary file...
Scanning image "hello-world:linux"

---

[TestCommand_Docker/Real_empty_image_with_tag - 2]
No package sources found, --help for usage information.

---

[TestCommand_OCIImage/Alpine_3.10_image_tar_with_3.18_version_file - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-alpine.tar"

Container Scanning Result (Alpine Linux v3.18):
Total 2 packages affected by 41 known vulnerabilities (2 Critical, 17 High, 14 Medium, 0 Low, 8 Unknown) from 1 ecosystem.
41 vulnerabilities can be fixed.


Alpine:v3.18
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| openssl        | 1.1.1k-r0         | Fix Available |         39 | libcrypto1.1... (2)     | # 3 Layer        | --            |
| zlib           | 1.2.11-r1         | Fix Available |          2 | zlib                    | # 3 Layer        | --            |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/Alpine_3.10_image_tar_with_3.18_version_file - 2]

---

[TestCommand_OCIImage/Empty_Ubuntu_22.04_image_tar - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-ubuntu.tar"

Container Scanning Result (Ubuntu 22.04.5 LTS):
Total 17 packages affected by 27 known vulnerabilities (2 Critical, 3 High, 9 Medium, 2 Low, 11 Unknown) from 1 ecosystem.
0 vulnerabilities can be fixed.


Ubuntu:22.04
+---------------------------------------------------------------------------------------------------------------------------------------+
| Source:os:var/lib/dpkg/status                                                                                                         |
+----------------+-------------------------+------------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION       | FIX AVAILABLE    | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------------+------------------+------------+-------------------------+------------------+---------------+
| coreutils      | 8.32-4.1ubuntu1.2       | No fix available |          1 | coreutils               | # 4 Layer        | ubuntu        |
| gcc-12         | 12.3.0-1ubuntu1~22.04   | No fix available |          2 | gcc-12-base... (3)      | # 4 Layer        | ubuntu        |
| glibc          | 2.35-0ubuntu3.8         | No fix available |          3 | libc-bin, libc6         | # 4 Layer        | ubuntu        |
| gnupg2         | 2.2.27-3ubuntu2.1       | No fix available |          2 | gpgv                    | # 4 Layer        | ubuntu        |
| gnutls28       | 3.7.3-4ubuntu1.5        | No fix available |          1 | libgnutls30             | # 4 Layer        | ubuntu        |
| krb5           | 1.19.2-2ubuntu0.4       | No fix available |          2 | libgssapi-krb5-2... (4) | # 4 Layer        | ubuntu        |
| libcap2        | 1:2.44-1ubuntu0.22.04.1 | No fix available |          1 | libcap2                 | # 4 Layer        | ubuntu        |
| libgcrypt20    | 1.9.4-3ubuntu3          | No fix available |          1 | libgcrypt20             | # 4 Layer        | ubuntu        |
| libtasn1-6     | 4.18.0-4build1          | No fix available |          2 | libtasn1-6              | # 4 Layer        | ubuntu        |
| libzstd        | 1.4.8+dfsg-3build1      | No fix available |          1 | libzstd1                | # 4 Layer        | ubuntu        |
| ncurses        | 6.3-2ubuntu0.1          | No fix available |          2 | libncurses6... (5)      | # 4 Layer        | ubuntu        |
| openssl        | 3.0.2-0ubuntu1.18       | No fix available |          2 | libssl3                 | # 4 Layer        | ubuntu        |
| pam            | 1.4.0-11ubuntu2.5       | No fix available |          1 | libpam-modules... (4)   | # 4 Layer        | ubuntu        |
| pcre2          | 10.39-3ubuntu0.1        | No fix available |          1 | libpcre2-8-0            | # 4 Layer        | ubuntu        |
| perl           | 5.34.0-3ubuntu1.3       | No fix available |          2 | perl-base               | # 4 Layer        | ubuntu        |
| shadow         | 1:4.8.1-2ubuntu2.2      | No fix available |          2 | login, passwd           | # 4 Layer        | ubuntu        |
| systemd        | 249.11-0ubuntu3.12      | No fix available |          1 | libsystemd0... (2)      | # 4 Layer        | ubuntu        |
+----------------+-------------------------+------------------+------------+-------------------------+------------------+---------------+

Filtered Vulnerabilities:
+---------+--------------+--------------------------+---------------------+----------------+
| PACKAGE | ECOSYSTEM    | INSTALLED VERSION        | FILTERED VULN COUNT | FILTER REASONS |
+---------+--------------+--------------------------+---------------------+----------------+
| glibc   | Ubuntu:22.04 | 2.35-0ubuntu3.8          |                   1 | Unimportant    |
| krb5    | Ubuntu:22.04 | 1.19.2-2ubuntu0.4        |                   1 | Unimportant    |
| pcre3   | Ubuntu:22.04 | 2:8.39-13ubuntu0.22.04.1 |                   1 | Unimportant    |
| perl    | Ubuntu:22.04 | 5.34.0-3ubuntu1.3        |                   1 | Unimportant    |
+---------+--------------+--------------------------+---------------------+----------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/Empty_Ubuntu_22.04_image_tar - 2]

---

[TestCommand_OCIImage/Invalid_path - 1]
Scanning local image tarball "../../fixtures/locks-manyoci-image/no-file-here.tar"

---

[TestCommand_OCIImage/Invalid_path - 2]
failed to load image from tarball with path "../../fixtures/locks-manyoci-image/no-file-here.tar": open ../../fixtures/locks-manyoci-image/no-file-here.tar: no such file or directory

---

[TestCommand_OCIImage/Scanning_java_image_with_some_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-java-full.tar"

Container Scanning Result (Alpine Linux v3.21):
Total 16 packages affected by 21 known vulnerabilities (1 Critical, 7 High, 8 Medium, 0 Low, 5 Unknown) from 2 ecosystems.
21 vulnerabilities can be fixed.


Maven
+-------------------------------------------------------------------------------------------------------------------------------+
| Source:artifact:app/target.jar                                                                                                |
+-------------------------------------------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE                                   | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+-------------------------------------------+-------------------+---------------+------------+------------------+---------------+
| com.google.protobuf:protobuf-java         | 3.21.12           | Fix Available |          1 | # 12 Layer       | --            |
| com.nimbusds:nimbus-jose-jwt              | 9.31              | Fix Available |          1 | # 12 Layer       | --            |
| commons-beanutils:commons-beanutils       | 1.9.4             | Fix Available |          1 | # 12 Layer       | --            |
| dnsjava:dnsjava                           | 3.4.0             | Fix Available |          1 | # 12 Layer       | --            |
| io.netty:netty-codec-http                 | 4.1.100.Final     | Fix Available |          1 | # 12 Layer       | --            |
| io.netty:netty-common                     | 4.1.100.Final     | Fix Available |          2 | # 12 Layer       | --            |
| io.netty:netty-handler                    | 4.1.100.Final     | Fix Available |          1 | # 12 Layer       | --            |
| org.apache.avro:avro                      | 1.9.2             | Fix Available |          2 | # 12 Layer       | --            |
| org.apache.commons:commons-compress       | 1.21              | Fix Available |          2 | # 12 Layer       | --            |
| org.apache.commons:commons-configuration2 | 2.8.0             | Fix Available |          2 | # 12 Layer       | --            |
| org.eclipse.jetty:jetty-http              | 9.4.53.v20231009  | Fix Available |          1 | # 12 Layer       | --            |
+-------------------------------------------+-------------------+---------------+------------+------------------+---------------+
Alpine:v3.21
+-----------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                                    |
+----------------+-------------------+---------------+------------+----------------------------+------------------+-----------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT)    | INTRODUCED LAYER | IN BASE IMAGE   |
+----------------+-------------------+---------------+------------+----------------------------+------------------+-----------------+
| expat          | 2.6.4-r0          | Fix Available |          1 | libexpat                   | # 5 Layer        | eclipse-temurin |
| libtasn1       | 4.19.0-r2         | Fix Available |          1 | libtasn1                   | # 5 Layer        | eclipse-temurin |
| musl           | 1.2.5-r8          | Fix Available |          1 | musl, musl-utils           | # 0 Layer        | alpine          |
| openssl        | 3.3.2-r4          | Fix Available |          2 | libcrypto3, libssl3... (3) | # 0 Layer        | alpine          |
| sqlite         | 3.47.1-r0         | Fix Available |          1 | sqlite-libs                | # 5 Layer        | eclipse-temurin |
+----------------+-------------------+---------------+------------+----------------------------+------------------+-----------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/Scanning_java_image_with_some_packages - 2]

---

[TestCommand_OCIImage/Scanning_python_image_with_no_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-python-empty.tar"

Container Scanning Result (Debian GNU/Linux 10 (buster)):
Total 14 packages affected by 22 known vulnerabilities (0 Critical, 6 High, 2 Medium, 0 Low, 14 Unknown) from 2 ecosystems.
22 vulnerabilities can be fixed.


PyPI
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/ensurepip/_bundled/pip-23.0.1-py3-none-any.whl      |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| pip     | 23.0.1            | Fix Available |          1 | # 7 Layer        | python        |
+---------+-------------------+---------------+------------+------------------+---------------+
+------------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/ensurepip/_bundled/setuptools-58.1.0-py3-none-any.whl  |
+------------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE    | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+------------+-------------------+---------------+------------+------------------+---------------+
| setuptools | 58.1.0            | Fix Available |          3 | # 7 Layer        | python        |
+------------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/pip-23.0.1.dist-info/METADATA         |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| pip     | 23.0.1            | Fix Available |          1 | # 13 Layer       | python        |
+---------+-------------------+---------------+------------+------------------+---------------+
+------------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/setuptools-58.1.0.dist-info/METADATA     |
+------------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE    | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+------------+-------------------+---------------+------------+------------------+---------------+
| setuptools | 58.1.0            | Fix Available |          3 | # 13 Layer       | python        |
+------------+-------------------+---------------+------------+------------------+---------------+
Debian:10
+-----------------------------------------------------------------------------------------------------------------------------------------------+
| Source:os:var/lib/dpkg/status                                                                                                                 |
+------------------------+------------------------+---------------+------------+-----------------------------+------------------+---------------+
| SOURCE PACKAGE         | INSTALLED VERSION      | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT)     | INTRODUCED LAYER | IN BASE IMAGE |
+------------------------+------------------------+---------------+------------+-----------------------------+------------------+---------------+
| debian-archive-keyring | 2019.1+deb10u1         | Fix Available |          1 | debian-archive-keyri... (1) | # 0 Layer        | python        |
| expat                  | 2.2.6-2+deb10u6        | Fix Available |          1 | libexpat1                   | # 7 Layer        | python        |
| glibc                  | 2.28-10+deb10u2        | Fix Available |          2 | libc-bin, libc6             | # 0 Layer        | python        |
| gnutls28               | 3.6.7-4+deb10u10       | Fix Available |          2 | libgnutls30                 | # 0 Layer        | python        |
| ncurses                | 6.1+20181013-2+deb10u3 | Fix Available |          2 | libncursesw6... (4)         | # 0 Layer        | python        |
| openssl                | 1.1.1n-0+deb10u5       | Fix Available |          1 | libssl1.1, openssl          | # 4 Layer        | python        |
| systemd                | 241-7~deb10u9          | Fix Available |          1 | libsystemd0... (2)          | # 0 Layer        | python        |
| tar                    | 1.30+dfsg-6            | Fix Available |          1 | tar                         | # 0 Layer        | python        |
| tzdata                 | 2021a-0+deb10u11       | Fix Available |          2 | tzdata                      | # 0 Layer        | python        |
| util-linux             | 2.33.1-0.1             | Fix Available |          1 | fdisk, libblkid1... (8)     | # 0 Layer        | python        |
+------------------------+------------------------+---------------+------------+-----------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/Scanning_python_image_with_no_packages - 2]

---

[TestCommand_OCIImage/Scanning_python_image_with_some_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-python-full.tar"

Container Scanning Result (Debian GNU/Linux 10 (buster)):
Total 19 packages affected by 36 known vulnerabilities (0 Critical, 12 High, 9 Medium, 0 Low, 15 Unknown) from 2 ecosystems.
36 vulnerabilities can be fixed.


PyPI
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/ensurepip/_bundled/pip-23.0.1-py3-none-any.whl      |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| pip     | 23.0.1            | Fix Available |          1 | # 7 Layer        | python        |
+---------+-------------------+---------------+------------+------------------+---------------+
+------------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/ensurepip/_bundled/setuptools-58.1.0-py3-none-any.whl  |
+------------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE    | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+------------+-------------------+---------------+------------+------------------+---------------+
| setuptools | 58.1.0            | Fix Available |          3 | # 7 Layer        | python        |
+------------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/Django-1.11.29.dist-info/METADATA     |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| django  | 1.11.29           | Fix Available |          3 | # 17 Layer       | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/Flask-0.12.2.dist-info/METADATA       |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| flask   | 0.12.2            | Fix Available |          3 | # 17 Layer       | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/idna-2.7.dist-info/METADATA           |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| idna    | 2.7               | Fix Available |          1 | # 17 Layer       | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/pip-23.0.1.dist-info/METADATA         |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| pip     | 23.0.1            | Fix Available |          1 | # 13 Layer       | python        |
+---------+-------------------+---------------+------------+------------------+---------------+
+----------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/requests-2.20.0.dist-info/METADATA     |
+----------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE  | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+----------+-------------------+---------------+------------+------------------+---------------+
| requests | 2.20.0            | Fix Available |          2 | # 17 Layer       | --            |
+----------+-------------------+---------------+------------+------------------+---------------+
+------------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/setuptools-58.1.0.dist-info/METADATA     |
+------------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE    | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+------------+-------------------+---------------+------------+------------------+---------------+
| setuptools | 58.1.0            | Fix Available |          3 | # 13 Layer       | python        |
+------------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:usr/local/lib/python3.9/site-packages/urllib3-1.24.3.dist-info/METADATA     |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| urllib3 | 1.24.3            | Fix Available |          5 | # 17 Layer       | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
Debian:10
+-----------------------------------------------------------------------------------------------------------------------------------------------+
| Source:os:var/lib/dpkg/status                                                                                                                 |
+------------------------+------------------------+---------------+------------+-----------------------------+------------------+---------------+
| SOURCE PACKAGE         | INSTALLED VERSION      | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT)     | INTRODUCED LAYER | IN BASE IMAGE |
+------------------------+------------------------+---------------+------------+-----------------------------+------------------+---------------+
| debian-archive-keyring | 2019.1+deb10u1         | Fix Available |          1 | debian-archive-keyri... (1) | # 0 Layer        | python        |
| expat                  | 2.2.6-2+deb10u6        | Fix Available |          1 | libexpat1                   | # 7 Layer        | python        |
| glibc                  | 2.28-10+deb10u2        | Fix Available |          2 | libc-bin, libc6             | # 0 Layer        | python        |
| gnutls28               | 3.6.7-4+deb10u10       | Fix Available |          2 | libgnutls30                 | # 0 Layer        | python        |
| ncurses                | 6.1+20181013-2+deb10u3 | Fix Available |          2 | libncursesw6... (4)         | # 0 Layer        | python        |
| openssl                | 1.1.1n-0+deb10u5       | Fix Available |          1 | libssl1.1, openssl          | # 4 Layer        | python        |
| systemd                | 241-7~deb10u9          | Fix Available |          1 | libsystemd0... (2)          | # 0 Layer        | python        |
| tar                    | 1.30+dfsg-6            | Fix Available |          1 | tar                         | # 0 Layer        | python        |
| tzdata                 | 2021a-0+deb10u11       | Fix Available |          2 | tzdata                      | # 0 Layer        | python        |
| util-linux             | 2.33.1-0.1             | Fix Available |          1 | fdisk, libblkid1... (8)     | # 0 Layer        | python        |
+------------------------+------------------------+---------------+------------+-----------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/Scanning_python_image_with_some_packages - 2]

---

[TestCommand_OCIImage/scanning_image_with_go_binary - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-package-tracing.tar"

Container Scanning Result (Alpine Linux v3.20):
Total 8 packages affected by 54 known vulnerabilities (0 Critical, 0 High, 0 Medium, 0 Low, 54 Unknown) from 2 ecosystems.
54 vulnerabilities can be fixed.


Go
+---------------------------------------------------------------------------------------------+
| Source:artifact:go/bin/more-vuln-overwrite-less-vuln                                        |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| stdlib  | 1.22.4            | Fix Available |          8 | # 9 Layer        | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:go/bin/ptf-1.2.0                                                            |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| stdlib  | 1.22.4            | Fix Available |          8 | # 2 Layer        | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:go/bin/ptf-1.3.0                                                            |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| stdlib  | 1.22.4            | Fix Available |          8 | # 4 Layer        | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:go/bin/ptf-1.3.0-moved                                                      |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| stdlib  | 1.22.4            | Fix Available |          8 | # 3 Layer        | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:go/bin/ptf-1.4.0                                                            |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| stdlib  | 1.22.4            | Fix Available |          8 | # 2 Layer        | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
+---------------------------------------------------------------------------------------------+
| Source:artifact:go/bin/ptf-vulnerable                                                       |
+---------+-------------------+---------------+------------+------------------+---------------+
| PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+---------+-------------------+---------------+------------+------------------+---------------+
| stdlib  | 1.22.4            | Fix Available |          8 | # 7 Layer        | --            |
+---------+-------------------+---------------+------------+------------------+---------------+
Alpine:v3.20
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| musl           | 1.2.5-r0          | Fix Available |          1 | musl, musl-utils        | # 0 Layer        | alpine        |
| openssl        | 3.3.1-r0          | Fix Available |          5 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_image_with_go_binary - 2]

---

[TestCommand_OCIImage/scanning_node_modules_using_npm_with_no_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-npm-empty.tar"

Container Scanning Result (Alpine Linux v3.19):
Total 2 packages affected by 11 known vulnerabilities (0 Critical, 0 High, 4 Medium, 0 Low, 7 Unknown) from 1 ecosystem.
11 vulnerabilities can be fixed.


Alpine:v3.19
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| busybox        | 1.36.1-r15        | Fix Available |          4 | busybox... (3)          | # 0 Layer        | alpine        |
| openssl        | 3.1.4-r5          | Fix Available |          7 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_node_modules_using_npm_with_no_packages - 2]

---

[TestCommand_OCIImage/scanning_node_modules_using_npm_with_some_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-npm-full.tar"

Container Scanning Result (Alpine Linux v3.19):
Total 4 packages affected by 14 known vulnerabilities (2 Critical, 0 High, 5 Medium, 0 Low, 7 Unknown) from 2 ecosystems.
13 vulnerabilities can be fixed.


npm
+-------------------------------------------------------------------------------------------------+
| Source:artifact:prod/app/node_modules/.package-lock.json                                        |
+----------+-------------------+------------------+------------+------------------+---------------+
| PACKAGE  | INSTALLED VERSION | FIX AVAILABLE    | VULN COUNT | INTRODUCED LAYER | IN BASE IMAGE |
+----------+-------------------+------------------+------------+------------------+---------------+
| cryo     | 0.0.6             | No fix available |          1 | # 14 Layer       | --            |
| minimist | 0.0.8             | Fix Available    |          2 | # 13 Layer       | --            |
+----------+-------------------+------------------+------------+------------------+---------------+
Alpine:v3.19
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| busybox        | 1.36.1-r15        | Fix Available |          4 | busybox... (3)          | # 0 Layer        | alpine        |
| openssl        | 3.1.4-r5          | Fix Available |          7 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_node_modules_using_npm_with_some_packages - 2]

---

[TestCommand_OCIImage/scanning_node_modules_using_pnpm_with_no_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-pnpm-empty.tar"

Container Scanning Result (Alpine Linux v3.19):
Total 2 packages affected by 11 known vulnerabilities (0 Critical, 0 High, 4 Medium, 0 Low, 7 Unknown) from 1 ecosystem.
11 vulnerabilities can be fixed.


Alpine:v3.19
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| busybox        | 1.36.1-r15        | Fix Available |          4 | busybox... (3)          | # 0 Layer        | alpine        |
| openssl        | 3.1.4-r5          | Fix Available |          7 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_node_modules_using_pnpm_with_no_packages - 2]

---

[TestCommand_OCIImage/scanning_node_modules_using_pnpm_with_some_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-pnpm-full.tar"

Container Scanning Result (Alpine Linux v3.19):
Total 2 packages affected by 11 known vulnerabilities (0 Critical, 0 High, 4 Medium, 0 Low, 7 Unknown) from 1 ecosystem.
11 vulnerabilities can be fixed.


Alpine:v3.19
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| busybox        | 1.36.1-r15        | Fix Available |          4 | busybox... (3)          | # 0 Layer        | alpine        |
| openssl        | 3.1.4-r5          | Fix Available |          7 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_node_modules_using_pnpm_with_some_packages - 2]

---

[TestCommand_OCIImage/scanning_node_modules_using_yarn_with_no_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-yarn-empty.tar"

Container Scanning Result (Alpine Linux v3.19):
Total 2 packages affected by 11 known vulnerabilities (0 Critical, 0 High, 4 Medium, 0 Low, 7 Unknown) from 1 ecosystem.
11 vulnerabilities can be fixed.


Alpine:v3.19
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| busybox        | 1.36.1-r15        | Fix Available |          4 | busybox... (3)          | # 0 Layer        | alpine        |
| openssl        | 3.1.4-r5          | Fix Available |          7 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_node_modules_using_yarn_with_no_packages - 2]

---

[TestCommand_OCIImage/scanning_node_modules_using_yarn_with_some_packages - 1]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-yarn-full.tar"

Container Scanning Result (Alpine Linux v3.19):
Total 2 packages affected by 11 known vulnerabilities (0 Critical, 0 High, 4 Medium, 0 Low, 7 Unknown) from 1 ecosystem.
11 vulnerabilities can be fixed.


Alpine:v3.19
+------------------------------------------------------------------------------------------------------------------------------+
| Source:os:lib/apk/db/installed                                                                                               |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| SOURCE PACKAGE | INSTALLED VERSION | FIX AVAILABLE | VULN COUNT | BINARY PACKAGES (COUNT) | INTRODUCED LAYER | IN BASE IMAGE |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+
| busybox        | 1.36.1-r15        | Fix Available |          4 | busybox... (3)          | # 0 Layer        | alpine        |
| openssl        | 3.1.4-r5          | Fix Available |          7 | libcrypto3, libssl3     | # 0 Layer        | alpine        |
+----------------+-------------------+---------------+------------+-------------------------+------------------+---------------+

For the most comprehensive scan results, we recommend using the HTML output: `osv-scanner scan image --serve <image_name>`.
You can also view the full vulnerability list in your terminal with: `osv-scanner scan image --format vertical <image_name>`.

---

[TestCommand_OCIImage/scanning_node_modules_using_yarn_with_some_packages - 2]

---

[TestCommand_OCIImageAllPackagesJSON/Scanning_python_image_with_some_packages - 1]
{
  "results": [
    {
      "source": {
        "path": "usr/local/lib/python3.9/ensurepip/_bundled/pip-23.0.1-py3-none-any.whl",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "pip",
            "version": "23.0.1",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 7
            }
          },
          "vulnerabilities": [
            "GHSA-mq26-g339-26xf",
            "PYSEC-2023-228"
          ],
          "groups": 1
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/ensurepip/_bundled/setuptools-58.1.0-py3-none-any.whl",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "setuptools",
            "version": "58.1.0",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 7
            }
          },
          "vulnerabilities": [
            "GHSA-5rjg-fvgr-3xxf",
            "GHSA-cx63-2mw6-8hw5",
            "GHSA-r9hx-vwmv-q579",
            "PYSEC-2022-43012"
          ],
          "groups": 3
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/Django-1.11.29.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "django",
            "version": "1.11.29",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 17
            }
          },
          "vulnerabilities": [
            "GHSA-68w8-qjq3-2gfm",
            "GHSA-8x94-hmjh-97hq",
            "GHSA-rrqc-c2jx-6jgv",
            "PYSEC-2021-98"
          ],
          "groups": 3
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/Flask-0.12.2.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "flask",
            "version": "0.12.2",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 17
            }
          },
          "vulnerabilities": [
            "GHSA-562c-5r94-xh97",
            "GHSA-5wv5-4vpf-pj6m",
            "GHSA-m2qf-hxjv-5gpq",
            "PYSEC-2018-66",
            "PYSEC-2019-179",
            "PYSEC-2023-62"
          ],
          "groups": 3
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/idna-2.7.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "idna",
            "version": "2.7",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 17
            }
          },
          "vulnerabilities": [
            "GHSA-jjg7-2v4v-x38h",
            "PYSEC-2024-60"
          ],
          "groups": 1
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/pip-23.0.1.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "pip",
            "version": "23.0.1",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 13
            }
          },
          "vulnerabilities": [
            "GHSA-mq26-g339-26xf",
            "PYSEC-2023-228"
          ],
          "groups": 1
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/requests-2.20.0.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "requests",
            "version": "2.20.0",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 17
            }
          },
          "vulnerabilities": [
            "GHSA-9wx4-h78v-vm56",
            "GHSA-j8r2-6x86-q33q",
            "PYSEC-2023-74"
          ],
          "groups": 2
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/setuptools-58.1.0.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "setuptools",
            "version": "58.1.0",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 13
            }
          },
          "vulnerabilities": [
            "GHSA-5rjg-fvgr-3xxf",
            "GHSA-cx63-2mw6-8hw5",
            "GHSA-r9hx-vwmv-q579",
            "PYSEC-2022-43012"
          ],
          "groups": 3
        }
      ]
    },
    {
      "source": {
        "path": "usr/local/lib/python3.9/site-packages/urllib3-1.24.3.dist-info/METADATA",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "urllib3",
            "version": "1.24.3",
            "ecosystem": "PyPI",
            "image_origin_details": {
              "index": 17
            }
          },
          "vulnerabilities": [
            "GHSA-34jh-p97f-mpxf",
            "GHSA-g4mx-q9vg-27p4",
            "GHSA-v845-jxx5-vc9f",
            "GHSA-wqvq-5m8c-6g24",
            "PYSEC-2020-148",
            "PYSEC-2021-108",
            "PYSEC-2023-192",
            "PYSEC-2023-212"
          ],
          "groups": 5
        }
      ]
    },
    {
      "source": {
        "path": "var/lib/dpkg/status",
        "type": "os"
      },
      "packages": [
        {
          "package": {
            "name": "debian-archive-keyring",
            "os_package_name": "debian-archive-keyring",
            "version": "2019.1+deb10u1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3482-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "fdisk",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "libblkid1",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "glibc",
            "os_package_name": "libc-bin",
            "version": "2.28-10+deb10u2",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3807-1",
            "DLA-3850-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "glibc",
            "os_package_name": "libc6",
            "version": "2.28-10+deb10u2",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3807-1",
            "DLA-3850-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "expat",
            "os_package_name": "libexpat1",
            "version": "2.2.6-2+deb10u6",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 7
            }
          },
          "vulnerabilities": [
            "DLA-3783-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "libfdisk1",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "gnutls28",
            "os_package_name": "libgnutls30",
            "version": "3.6.7-4+deb10u10",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3660-1",
            "DLA-3740-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "libmount1",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "libncursesw6",
            "version": "6.1+20181013-2+deb10u3",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3586-1",
            "DLA-3682-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "libsmartcols1",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "libssl1.1",
            "version": "1.1.1n-0+deb10u5",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "DLA-3530-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "systemd",
            "os_package_name": "libsystemd0",
            "version": "241-7~deb10u9",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3474-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "libtinfo6",
            "version": "6.1+20181013-2+deb10u3",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3586-1",
            "DLA-3682-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "systemd",
            "os_package_name": "libudev1",
            "version": "241-7~deb10u9",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3474-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "libuuid1",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "mount",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "ncurses-base",
            "version": "6.1+20181013-2+deb10u3",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3586-1",
            "DLA-3682-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "ncurses-bin",
            "version": "6.1+20181013-2+deb10u3",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3586-1",
            "DLA-3682-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "openssl",
            "version": "1.1.1n-0+deb10u5",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "DLA-3530-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "tar",
            "os_package_name": "tar",
            "version": "1.30+dfsg-6",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3755-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "tzdata",
            "os_package_name": "tzdata",
            "version": "2021a-0+deb10u11",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3684-1",
            "DLA-3788-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "util-linux",
            "os_package_name": "util-linux",
            "version": "2.33.1-0.1",
            "ecosystem": "Debian:10",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "DLA-3782-1"
          ],
          "groups": 1
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  },
  "image_metadata": {
    "os": "Debian GNU/Linux 10 (buster)",
    "layer_metadata": [
      {
        "diff_id": "sha256:...",
        "command": "ADD file:2818e508d01da218...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "CMD [/"bash/"]",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV PATH=/usr/local/bin:/...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV LANG=C.UTF-8",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /bin/sh -c set -eux; ...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV GPG_KEY=E3FF2839C048B...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV PYTHON_VERSION=3.9.17",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /bin/sh -c set -eux; ...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /bin/sh -c set -eux; ...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV PYTHON_PIP_VERSION=23...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV PYTHON_SETUPTOOLS_VER...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV PYTHON_GET_PIP_URL=ht...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV PYTHON_GET_PIP_SHA256...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /bin/sh -c set -eux; ...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "CMD [/"python3/"]",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "WORKDIR /app",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "COPY ./python-fixture/req...",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /bin/sh -c pip instal...",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "COPY python-fixture/main....",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "",
        "command": "CMD [/"python/" /"main.py/"]",
        "is_empty": true,
        "base_image_index": 0
      }
    ],
    "base_images": [
      {},
      {
        "name": "python",
        "tags": null
      }
    ]
  }
}

---

[TestCommand_OCIImageAllPackagesJSON/Scanning_python_image_with_some_packages - 2]
Scanning local image tarball "../../../../internal/image/fixtures/test-python-full.tar"

---

[TestCommand_OCIImageAllPackagesJSON/scanning_image_with_go_binary - 1]
{
  "results": [
    {
      "source": {
        "path": "go/bin/ptf-1.4.0",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "github.com/BurntSushi/toml",
            "version": "1.4.0",
            "ecosystem": "Go",
            "image_origin_details": {
              "index": 2
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "stdlib",
            "version": "1.22.4",
            "ecosystem": "Go",
            "image_origin_details": {
              "index": 2
            }
          },
          "vulnerabilities": [
            "GO-2024-2963",
            "GO-2024-3105",
            "GO-2024-3106",
            "GO-2024-3107",
            "GO-2025-3373",
            "GO-2025-3420",
            "GO-2025-3447",
            "GO-2025-3563"
          ],
          "groups": 8
        },
        {
          "package": {
            "name": "ptf",
            "version": "(devel)",
            "ecosystem": "Go",
            "image_origin_details": {
              "index": 2
            }
          },
          "groups": 0,
          "vulnerabilities": null
        }
      ]
    },
    {
      "source": {
        "path": "lib/apk/db/installed",
        "type": "os"
      },
      "packages": [
        {
          "package": {
            "name": "alpine-baselayout",
            "os_package_name": "alpine-baselayout",
            "version": "3.6.5-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "66187892e05b03a41d08e9acabd19b7576a1c875",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "alpine-baselayout",
            "os_package_name": "alpine-baselayout-data",
            "version": "3.6.5-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "66187892e05b03a41d08e9acabd19b7576a1c875",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "alpine-keys",
            "os_package_name": "alpine-keys",
            "version": "2.4-r1",
            "ecosystem": "Alpine:v3.20",
            "commit": "aab68f8c9ab434a46710de8e12fb3206e2930a59",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "apk-tools",
            "os_package_name": "apk-tools",
            "version": "2.14.4-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "d435c805af8af4171438da3ec3429c094aac4c6e",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "busybox",
            "os_package_name": "busybox",
            "version": "1.36.1-r29",
            "ecosystem": "Alpine:v3.20",
            "commit": "1747c01fb96905f101c25609011589d28e01cbb8",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "busybox",
            "os_package_name": "busybox-binsh",
            "version": "1.36.1-r29",
            "ecosystem": "Alpine:v3.20",
            "commit": "1747c01fb96905f101c25609011589d28e01cbb8",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "ca-certificates",
            "os_package_name": "ca-certificates-bundle",
            "version": "20240226-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "56fb003da0adcea3b59373ef6a633d0c5bfef3ac",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "libcrypto3",
            "version": "3.3.1-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "15cc530882e1e6f3dc8a77200ee8bd01cb98f53c",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2024-12797",
            "CVE-2024-13176",
            "CVE-2024-5535",
            "CVE-2024-6119",
            "CVE-2024-9143"
          ],
          "groups": 5
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "libssl3",
            "version": "3.3.1-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "15cc530882e1e6f3dc8a77200ee8bd01cb98f53c",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2024-12797",
            "CVE-2024-13176",
            "CVE-2024-5535",
            "CVE-2024-6119",
            "CVE-2024-9143"
          ],
          "groups": 5
        },
        {
          "package": {
            "name": "musl",
            "os_package_name": "musl",
            "version": "1.2.5-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "4fe5bdbe47b100daa6380f81c4c8ea3f99b61362",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2025-26519"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "musl",
            "os_package_name": "musl-utils",
            "version": "1.2.5-r0",
            "ecosystem": "Alpine:v3.20",
            "commit": "4fe5bdbe47b100daa6380f81c4c8ea3f99b61362",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2025-26519"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "pax-utils",
            "os_package_name": "scanelf",
            "version": "1.3.7-r2",
            "ecosystem": "Alpine:v3.20",
            "commit": "e65a4f2d0470e70d862ef2b5c412ecf2cb9ad0a6",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "busybox",
            "os_package_name": "ssl_client",
            "version": "1.36.1-r29",
            "ecosystem": "Alpine:v3.20",
            "commit": "1747c01fb96905f101c25609011589d28e01cbb8",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        },
        {
          "package": {
            "name": "zlib",
            "os_package_name": "zlib",
            "version": "1.3.1-r1",
            "ecosystem": "Alpine:v3.20",
            "commit": "fad2d175bd85eb4c5566765375392a7394dfbcf2",
            "image_origin_details": {
              "index": 0
            }
          },
          "groups": 0,
          "vulnerabilities": null
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  },
  "image_metadata": {
    "os": "Alpine Linux v3.20",
    "layer_metadata": [
      {
        "diff_id": "sha256:...",
        "command": "ADD file:33ebe56b967747a97dcec01bc2559962bee8823686c9739d26be060381bbb3ca in / ",
        "is_empty": false,
        "base_image_index": 2
      },
      {
        "diff_id": "",
        "command": "CMD [/"/bin/sh/"]",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "COPY /work/ptf-1.4.0 /go/bin/ # buildkit",
        "is_empty": false,
        "base_image_index": 0
      }
    ],
    "base_images": [
      {},
      {
        "name": "alpine",
        "tags": null
      },
      {
        "name": "alpine",
        "tags": null
      }
    ]
  }
}

---

[TestCommand_OCIImageAllPackagesJSON/scanning_image_with_go_binary - 2]
Scanning local image tarball "../../../../internal/image/fixtures/test-go-binary.tar"

---

[TestCommand_OCIImageAllPackagesJSON/scanning_node_modules_using_npm_with_some_packages - 1]
{
  "results": [
    {
      "source": {
        "path": "lib/apk/db/installed",
        "type": "os"
      },
      "packages": [
        {
          "package": {
            "name": "busybox",
            "os_package_name": "busybox",
            "version": "1.36.1-r15",
            "ecosystem": "Alpine:v3.19",
            "commit": "d1b6f274f29076967826e0ecf6ebcaa5d360272f",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2023-42363",
            "CVE-2023-42364",
            "CVE-2023-42365",
            "CVE-2023-42366"
          ],
          "groups": 4
        },
        {
          "package": {
            "name": "busybox",
            "os_package_name": "busybox-binsh",
            "version": "1.36.1-r15",
            "ecosystem": "Alpine:v3.19",
            "commit": "d1b6f274f29076967826e0ecf6ebcaa5d360272f",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2023-42363",
            "CVE-2023-42364",
            "CVE-2023-42365",
            "CVE-2023-42366"
          ],
          "groups": 4
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "libcrypto3",
            "version": "3.1.4-r5",
            "ecosystem": "Alpine:v3.19",
            "commit": "b784a22cad0c452586b438cb7a597d846fc09ff4",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2024-13176",
            "CVE-2024-2511",
            "CVE-2024-4603",
            "CVE-2024-4741",
            "CVE-2024-5535",
            "CVE-2024-6119",
            "CVE-2024-9143"
          ],
          "groups": 7
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "libssl3",
            "version": "3.1.4-r5",
            "ecosystem": "Alpine:v3.19",
            "commit": "b784a22cad0c452586b438cb7a597d846fc09ff4",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2024-13176",
            "CVE-2024-2511",
            "CVE-2024-4603",
            "CVE-2024-4741",
            "CVE-2024-5535",
            "CVE-2024-6119",
            "CVE-2024-9143"
          ],
          "groups": 7
        },
        {
          "package": {
            "name": "busybox",
            "os_package_name": "ssl_client",
            "version": "1.36.1-r15",
            "ecosystem": "Alpine:v3.19",
            "commit": "d1b6f274f29076967826e0ecf6ebcaa5d360272f",
            "image_origin_details": {
              "index": 0
            }
          },
          "vulnerabilities": [
            "CVE-2023-42363",
            "CVE-2023-42364",
            "CVE-2023-42365",
            "CVE-2023-42366"
          ],
          "groups": 4
        }
      ]
    },
    {
      "source": {
        "path": "prod/app/node_modules/.package-lock.json",
        "type": "artifact"
      },
      "packages": [
        {
          "package": {
            "name": "cryo",
            "version": "0.0.6",
            "ecosystem": "npm",
            "image_origin_details": {
              "index": 14
            }
          },
          "vulnerabilities": [
            "GHSA-38f5-ghc2-fcmv"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "minimist",
            "version": "0.0.8",
            "ecosystem": "npm",
            "image_origin_details": {
              "index": 13
            }
          },
          "vulnerabilities": [
            "GHSA-vh95-rmgr-6w4m",
            "GHSA-xvch-5gv4-984h"
          ],
          "groups": 2
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  },
  "image_metadata": {
    "os": "Alpine Linux v3.19",
    "layer_metadata": [
      {
        "diff_id": "sha256:...",
        "command": "ADD file:37a76ec18f988775...",
        "is_empty": false,
        "base_image_index": 4
      },
      {
        "diff_id": "",
        "command": "CMD [/"/bin/sh/"]",
        "is_empty": true,
        "base_image_index": 3
      },
      {
        "diff_id": "",
        "command": "ENV NODE_VERSION=20.11.1",
        "is_empty": true,
        "base_image_index": 2
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /0addgroup -g 1000 no...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENV YARN_VERSION=1.22.19",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN /0apk add --no-cache ...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "COPY file:4d192565a7220e1...",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ENTRYPOINT [/"docker-entry...",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "CMD [/"node/"]",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "ARG MANAGER_VERSION=10.2.4",
        "is_empty": true,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "WORKDIR /prod/app",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN |1 MANAGER_VERSION=10...",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN |1 MANAGER_VERSION=10...",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN |1 MANAGER_VERSION=10...",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN |1 MANAGER_VERSION=10...",
        "is_empty": false,
        "base_image_index": 0
      },
      {
        "diff_id": "sha256:...",
        "command": "RUN |1 MANAGER_VERSION=10...",
        "is_empty": false,
        "base_image_index": 0
      }
    ],
    "base_images": [
      {},
      {
        "name": "library/node",
        "tags": null
      },
      {
        "name": "ayan4m1/maven-node",
        "tags": null
      },
      {
        "name": "alpine",
        "tags": null
      },
      {
        "name": "alpine",
        "tags": null
      }
    ]
  }
}

---

[TestCommand_OCIImageAllPackagesJSON/scanning_node_modules_using_npm_with_some_packages - 2]
Scanning local image tarball "../../../../internal/image/fixtures/test-node_modules-npm-full.tar"

---

[TestCommand_OCIImageAllPackagesJSON/scanning_ubuntu_image_in_json_format - 1]
{
  "results": [
    {
      "source": {
        "path": "var/lib/dpkg/status",
        "type": "os"
      },
      "packages": [
        {
          "package": {
            "name": "coreutils",
            "os_package_name": "coreutils",
            "version": "8.32-4.1ubuntu1.2",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2016-2781"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "gcc-12",
            "os_package_name": "gcc-12-base",
            "version": "12.3.0-1ubuntu1~22.04",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2022-27943",
            "UBUNTU-CVE-2023-4039"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "gnupg2",
            "os_package_name": "gpgv",
            "version": "2.2.27-3ubuntu2.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2022-3219",
            "UBUNTU-CVE-2025-30258",
            "USN-7412-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "glibc",
            "os_package_name": "libc-bin",
            "version": "2.35-0ubuntu3.8",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2016-20013",
            "UBUNTU-CVE-2025-0395",
            "UBUNTU-CVE-2025-0577",
            "UBUNTU-CVE-2025-4802",
            "USN-7259-1",
            "USN-7541-1"
          ],
          "groups": 4
        },
        {
          "package": {
            "name": "glibc",
            "os_package_name": "libc6",
            "version": "2.35-0ubuntu3.8",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2016-20013",
            "UBUNTU-CVE-2025-0395",
            "UBUNTU-CVE-2025-0577",
            "UBUNTU-CVE-2025-4802",
            "USN-7259-1",
            "USN-7541-1"
          ],
          "groups": 4
        },
        {
          "package": {
            "name": "libcap2",
            "os_package_name": "libcap2",
            "version": "1:2.44-1ubuntu0.22.04.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2025-1390",
            "USN-7287-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "gcc-12",
            "os_package_name": "libgcc-s1",
            "version": "12.3.0-1ubuntu1~22.04",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2022-27943",
            "UBUNTU-CVE-2023-4039"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "libgcrypt20",
            "os_package_name": "libgcrypt20",
            "version": "1.9.4-3ubuntu3",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-2236"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "gnutls28",
            "os_package_name": "libgnutls30",
            "version": "3.7.3-4ubuntu1.5",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-12243",
            "USN-7281-1"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "krb5",
            "os_package_name": "libgssapi-krb5-2",
            "version": "1.19.2-2ubuntu0.4",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-26458",
            "UBUNTU-CVE-2024-26461",
            "UBUNTU-CVE-2024-3596",
            "UBUNTU-CVE-2025-24528",
            "UBUNTU-CVE-2025-3576",
            "USN-7257-1",
            "USN-7314-1"
          ],
          "groups": 3
        },
        {
          "package": {
            "name": "krb5",
            "os_package_name": "libk5crypto3",
            "version": "1.19.2-2ubuntu0.4",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-26458",
            "UBUNTU-CVE-2024-26461",
            "UBUNTU-CVE-2024-3596",
            "UBUNTU-CVE-2025-24528",
            "UBUNTU-CVE-2025-3576",
            "USN-7257-1",
            "USN-7314-1"
          ],
          "groups": 3
        },
        {
          "package": {
            "name": "krb5",
            "os_package_name": "libkrb5-3",
            "version": "1.19.2-2ubuntu0.4",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-26458",
            "UBUNTU-CVE-2024-26461",
            "UBUNTU-CVE-2024-3596",
            "UBUNTU-CVE-2025-24528",
            "UBUNTU-CVE-2025-3576",
            "USN-7257-1",
            "USN-7314-1"
          ],
          "groups": 3
        },
        {
          "package": {
            "name": "krb5",
            "os_package_name": "libkrb5support0",
            "version": "1.19.2-2ubuntu0.4",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-26458",
            "UBUNTU-CVE-2024-26461",
            "UBUNTU-CVE-2024-3596",
            "UBUNTU-CVE-2025-24528",
            "UBUNTU-CVE-2025-3576",
            "USN-7257-1",
            "USN-7314-1"
          ],
          "groups": 3
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "libncurses6",
            "version": "6.3-2ubuntu0.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-45918",
            "UBUNTU-CVE-2023-50495"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "libncursesw6",
            "version": "6.3-2ubuntu0.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-45918",
            "UBUNTU-CVE-2023-50495"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "pam",
            "os_package_name": "libpam-modules",
            "version": "1.4.0-11ubuntu2.5",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-10041"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "pam",
            "os_package_name": "libpam-modules-bin",
            "version": "1.4.0-11ubuntu2.5",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-10041"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "pam",
            "os_package_name": "libpam-runtime",
            "version": "1.4.0-11ubuntu2.5",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-10041"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "pam",
            "os_package_name": "libpam0g",
            "version": "1.4.0-11ubuntu2.5",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-10041"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "pcre2",
            "os_package_name": "libpcre2-8-0",
            "version": "10.39-3ubuntu0.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2022-41409"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "pcre3",
            "os_package_name": "libpcre3",
            "version": "2:8.39-13ubuntu0.22.04.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2017-11164"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "openssl",
            "os_package_name": "libssl3",
            "version": "3.0.2-0ubuntu1.18",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2024-13176",
            "UBUNTU-CVE-2024-41996",
            "UBUNTU-CVE-2024-9143",
            "USN-7278-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "gcc-12",
            "os_package_name": "libstdc++6",
            "version": "12.3.0-1ubuntu1~22.04",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2022-27943",
            "UBUNTU-CVE-2023-4039"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "systemd",
            "os_package_name": "libsystemd0",
            "version": "249.11-0ubuntu3.12",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-7008"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "libtasn1-6",
            "os_package_name": "libtasn1-6",
            "version": "4.18.0-4build1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2021-46848",
            "UBUNTU-CVE-2024-12133",
            "USN-7275-1"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "libtinfo6",
            "version": "6.3-2ubuntu0.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-45918",
            "UBUNTU-CVE-2023-50495"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "systemd",
            "os_package_name": "libudev1",
            "version": "249.11-0ubuntu3.12",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-7008"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "libzstd",
            "os_package_name": "libzstd1",
            "version": "1.4.8+dfsg-3build1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2022-4899"
          ],
          "groups": 1
        },
        {
          "package": {
            "name": "shadow",
            "os_package_name": "login",
            "version": "1:4.8.1-2ubuntu2.2",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-29383",
            "UBUNTU-CVE-2024-56433"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "ncurses-base",
            "version": "6.3-2ubuntu0.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-45918",
            "UBUNTU-CVE-2023-50495"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "ncurses",
            "os_package_name": "ncurses-bin",
            "version": "6.3-2ubuntu0.1",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-45918",
            "UBUNTU-CVE-2023-50495"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "shadow",
            "os_package_name": "passwd",
            "version": "1:4.8.1-2ubuntu2.2",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-29383",
            "UBUNTU-CVE-2024-56433"
          ],
          "groups": 2
        },
        {
          "package": {
            "name": "perl",
            "os_package_name": "perl-base",
            "version": "5.34.0-3ubuntu1.3",
            "ecosystem": "Ubuntu:22.04",
            "image_origin_details": {
              "index": 4
            }
          },
          "vulnerabilities": [
            "UBUNTU-CVE-2023-31486",
            "UBUNTU-CVE-2023-47039",
            "UBUNTU-CVE-2024-56406",
            "USN-7434-1"
          ],
          "groups": 3
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  },
  "image_metadata": {
    "os": "Ubuntu 22.04.5 LTS",
    "layer_metadata": [
      {
        "diff_id": "",
        "command": "/bin/sh -c #(nop)  ARG RELEASE",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "/bin/sh -c #(nop)  ARG LAUNCHPAD_BUILD_ARCH",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "/bin/sh -c #(nop)  LABEL org.opencontainers.image.ref.name=ubuntu",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "/bin/sh -c #(nop)  LABEL org.opencontainers.image.version=22.04",
        "is_empty": true,
        "base_image_index": 1
      },
      {
        "diff_id": "sha256:...",
        "command": "/bin/sh -c #(nop) ADD file:1b6c8c9518be42fa2afe5e241ca31677fce58d27cdfa88baa91a65a259be3637 in / ",
        "is_empty": false,
        "base_image_index": 1
      },
      {
        "diff_id": "",
        "command": "/bin/sh -c #(nop)  CMD [/"/bin/bash/"]",
        "is_empty": true,
        "base_image_index": 1
      }
    ],
    "base_images": [
      {},
      {
        "name": "ubuntu",
        "tags": null
      }
    ]
  }
}

---

[TestCommand_OCIImageAllPackagesJSON/scanning_ubuntu_image_in_json_format - 2]
Scanning local image tarball "../../../../internal/image/fixtures/test-ubuntu.tar"

---
